@@ -2,7 +2,8 @@ v. 0.6.4
 - calculated spectra precision in txt files changed to e-4
 - spectra lines width changed
 - data trimming features corrected
-- spectra plot ereasing on session clearing impelemented
+- spectra plot erasing on session clearing impelemented
+- inverting x axis for uv and ecd spectra added
 
 v. 0.6.3
 - fixed export error when not choosen, but all data were exported
